--- a/src/manifest.json
+++ b/src/manifest.json
@@ -50,7 +50,7 @@
             }
         },
         "domain" : "h5.manager.xiaolvyouzi.com",
-        "title" : "小驴优资"
+        "title" : "新疆国旅专营店"
     },
     "quickapp" : {},
     "mp-weixin" : {
