--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "uniAPP",
+    "name" : "新疆国旅专营店",
     "appid" : "__UNI__C00B4C4",
     "description" : "",
     "versionName" : "1.0.0",
