--- a/src/manifest.json
+++ b/src/manifest.json
@@ -49,7 +49,7 @@
                 "enable" : true
             }
         },
-        "domain" : "h5.tstrip.com",
+        "domain" : "http://www.xjglcits.cn/spage/h5/",
         "title" : "新疆国旅专营店"
     },
     "quickapp" : {},
